spotfire/test/files/data_function/syntax_error_b.txt
Error executing Python script:

  File "<data_function>", line 1
    if + 42
          ^
SyntaxError: invalid syntax (<data_function>, line 1)

Traceback (most recent call last):
  File "data_function.py", in _compile_script
    self.compiled_script = compile(self.script, self.script_filename, 'exec')
